# University

./: .gitattributes  .gitignore  README.md
DataCompression/project/: Cargo.toml
DataCompression/project/benches/: benchmarks.rs
DataCompression/project/charts/report/: index.html
DataCompression/project/doc/: raport.md
DataCompression/project/huffman-compress/: Cargo.toml
DataCompression/project/huffman-compress/src/: lib.rs
DataCompression/project/src/: main.rs
DataCompression/project/src/sequitur/: error.rs  mod.rs  tests.rs
DataCompression/project/test_data/: SOURCES
DatabaseApplications/project/: Cargo.toml
DatabaseApplications/project/migrations/2018-05-04-152924_create_delivery/: down.sql  up.sql
DatabaseApplications/project/migrations/2018-05-04-152929_create_delivery_feature/: up.sql
DatabaseApplications/project/src/application/: mod.rs
DatabaseApplications/project/src/domain/: mod.rs
DatabaseApplications/project/templates/: cargo.html.hbs  cargos.html.hbs  shop.html.hbs
EvolutionaryAlgorithms/project/: .vim.custom  Cargo.toml
EvolutionaryAlgorithms/project/doc/: .vim.custom  REPORT.md
EvolutionaryAlgorithms/project/plots/: ermine_error.data  ermine_error.plot  rust_error.data  rust_error.plot  van_gogh_error.data  van_gogh_error.plot
EvolutionaryAlgorithms/project/src/: fitness_graph.rs  main.rs  main.rs.bw  main.rs.cielab  main.rs.genetic  main.rs.new  main.rs.old  main.rs.unbounded
TextAlgorithms/project/: .vim.custom  Cargo.toml  README_pl.md
TextAlgorithms/project/benches/: benchmarks.rs
TextAlgorithms/project/charts/report/: index.html
TextAlgorithms/project/membench_data/data/: 1597_kasai  16KB_6n  16KB_9n  16KB_kasai  1KB_6n  1KB_9n  1KB_kasai  2KB_6n  2KB_9n  2KB_kasai  32KB_6n  32KB_9n  32KB_kasai  4KB_6n  4KB_9n  4KB_kasai  64KB_6n  64KB_9n  64KB_kasai  6n  8KB_6n  8KB_9n  8KB_kasai  9n  kasai  lipsum.py  lipsum.rs  lipsum.txt  max.py  plot
TextAlgorithms/project/membench_data/data2/: 128KB_6n  128KB_9n  128KB_kasai  16KB_6n  16KB_9n  16KB_kasai  1KB_6n  1KB_9n  1KB_kasai  2KB_6n  2KB_9n  2KB_kasai  32KB_6n  32KB_9n  32KB_kasai  4KB_6n  4KB_9n  4KB_kasai  64KB_6n  64KB_9n  64KB_kasai  6n  8KB_6n  8KB_9n  8KB_kasai  9n  kasai  max.py
TextAlgorithms/project/membench_data/data3/: 6n  9n  (+23 more)
TextAlgorithms/project/src/: algorithms.rs  main.rs  tests.rs
(+1619 files in other folders)
