[package]
name = "sequitur"
version = "0.1.0"
authors = ["Marcin Witkowski <contact@marwit.rs>"]
edition = "2018"

[dependencies]
generational-arena = "0.2"
slotmap = "0.4"
huffman-compress = { path = "huffman-compress" }
bitvec = "0.17"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
lipsum = "0.6"
criterion = "0.3"
lazy_static = "1.4"
rand = "0.7"

[lib]
name = "sequitur"
path = "src/sequitur/mod.rs"

[[bench]]
name = "benchmarks"
harness = false
