[package]
name = "project"
version = "0.1.0"
authors = ["MarWit"]

[dependencies]
diesel = { version = "1.2.2", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "0.4.3", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
serde = "*"
serde_derive = "*"
rocket = "0.3.12"
rocket_codegen = "0.3.12"
rocket_contrib = { version = "0.3.12", features = [ "handlebars_templates" ] }
chrono = "*"
error-chain = "*"


