[package]
name = "evolisa"
version = "0.1.0"
authors = ["MarWit <contact@marwit.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
ndarray = { version = "0.14", features = ["rayon"] }
ndarray-rand = "0.13"
image = "0.23"
imageproc = "0.22"
palette = "0.5"

[[bin]]
name = "fitness_graph"
path = "src/fitness_graph.rs"
