[package]
name = "lcp_bench"
version = "0.1.0"
authors = ["MarWit <contact@marwit.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
mem_bench = ["rand", "jemallocator", "jemalloc-ctl"]

[dependencies]
shrinkwraprs = "0.3"
rand = { version = "0.8", optional = true }
jemallocator = { version = "0.3", optional = true }
jemalloc-ctl = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "lcp_bench"
path = "src/main.rs"
bench = false

[lib]
name = "algorithms"
path = "src/algorithms.rs"
